src/CmzmLangParser.java
// Generated from ./CmzmLang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CmzmLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, PalavraChave=5, Tipo=6, OpArit=7, Atribuicao=8, 
		OpRel=9, AbreChave=10, FechaChave=11, AbrePar=12, FechaPar=13, AbreComentario=14, 
		FechaComentario=15, OpBoolE=16, OpBoolOu=17, WS=18, Var=19, NInt=20, NReal=21, 
		LString=22, ErrorChar=23, ErroVariavelNaoDeclarada=24;
	public static final int
		RULE_comando = 0, RULE_expressao = 1, RULE_declaracaoVar = 2, RULE_condicional = 3, 
		RULE_repeticao = 4, RULE_expressaoLogica = 5, RULE_expressaoLogicaString = 6, 
		RULE_expressaoLogicaInt = 7, RULE_expressaoLogicaReal = 8, RULE_atribuicao = 9, 
		RULE_atribuicaoString = 10, RULE_atribuicaoInt = 11, RULE_atribuicaoReal = 12, 
		RULE_expressaoAritInt = 13, RULE_expressaoAritReal = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"comando", "expressao", "declaracaoVar", "condicional", "repeticao", 
			"expressaoLogica", "expressaoLogicaString", "expressaoLogicaInt", "expressaoLogicaReal", 
			"atribuicao", "atribuicaoString", "atribuicaoInt", "atribuicaoReal", 
			"expressaoAritInt", "expressaoAritReal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'si'", "'sinaum'", "'uai'", null, null, null, "'='", null, 
			"'{'", "'}'", "'('", "')'", "'/*'", "'*/'", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "PalavraChave", "Tipo", "OpArit", "Atribuicao", 
			"OpRel", "AbreChave", "FechaChave", "AbrePar", "FechaPar", "AbreComentario", 
			"FechaComentario", "OpBoolE", "OpBoolOu", "WS", "Var", "NInt", "NReal", 
			"LString", "ErrorChar", "ErroVariavelNaoDeclarada"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CmzmLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmzmLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_comando);
		try {
			setState(34);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				expressao();
				setState(31);
				comando();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				expressao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoContext extends ParserRuleContext {
		public DeclaracaoVarContext declaracaoVar() {
			return getRuleContext(DeclaracaoVarContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public RepeticaoContext repeticao() {
			return getRuleContext(RepeticaoContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public ExpressaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterExpressao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitExpressao(this);
		}
	}

	public final ExpressaoContext expressao() throws RecognitionException {
		ExpressaoContext _localctx = new ExpressaoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expressao);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Tipo:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				declaracaoVar();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				condicional();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(38);
				repeticao();
				}
				break;
			case Var:
				enterOuterAlt(_localctx, 4);
				{
				setState(39);
				atribuicao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoVarContext extends ParserRuleContext {
		public TerminalNode Tipo() { return getToken(CmzmLangParser.Tipo, 0); }
		public TerminalNode Var() { return getToken(CmzmLangParser.Var, 0); }
		public DeclaracaoVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterDeclaracaoVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitDeclaracaoVar(this);
		}
	}

	public final DeclaracaoVarContext declaracaoVar() throws RecognitionException {
		DeclaracaoVarContext _localctx = new DeclaracaoVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracaoVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(Tipo);
			setState(43);
			match(Var);
			setState(44);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public TerminalNode AbrePar() { return getToken(CmzmLangParser.AbrePar, 0); }
		public ExpressaoLogicaContext expressaoLogica() {
			return getRuleContext(ExpressaoLogicaContext.class,0);
		}
		public TerminalNode FechaPar() { return getToken(CmzmLangParser.FechaPar, 0); }
		public List<TerminalNode> AbreChave() { return getTokens(CmzmLangParser.AbreChave); }
		public TerminalNode AbreChave(int i) {
			return getToken(CmzmLangParser.AbreChave, i);
		}
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> FechaChave() { return getTokens(CmzmLangParser.FechaChave); }
		public TerminalNode FechaChave(int i) {
			return getToken(CmzmLangParser.FechaChave, i);
		}
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitCondicional(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(T__1);
			setState(47);
			match(AbrePar);
			setState(48);
			expressaoLogica();
			setState(49);
			match(FechaPar);
			setState(50);
			match(AbreChave);
			setState(51);
			expressao();
			setState(52);
			match(FechaChave);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(53);
				match(T__2);
				setState(54);
				match(AbreChave);
				setState(55);
				expressao();
				setState(56);
				match(FechaChave);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RepeticaoContext extends ParserRuleContext {
		public TerminalNode AbrePar() { return getToken(CmzmLangParser.AbrePar, 0); }
		public ExpressaoLogicaContext expressaoLogica() {
			return getRuleContext(ExpressaoLogicaContext.class,0);
		}
		public TerminalNode FechaPar() { return getToken(CmzmLangParser.FechaPar, 0); }
		public TerminalNode AbreChave() { return getToken(CmzmLangParser.AbreChave, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode FechaChave() { return getToken(CmzmLangParser.FechaChave, 0); }
		public RepeticaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeticao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterRepeticao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitRepeticao(this);
		}
	}

	public final RepeticaoContext repeticao() throws RecognitionException {
		RepeticaoContext _localctx = new RepeticaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_repeticao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__3);
			setState(61);
			match(AbrePar);
			setState(62);
			expressaoLogica();
			setState(63);
			match(FechaPar);
			setState(64);
			match(AbreChave);
			setState(65);
			expressao();
			setState(66);
			match(FechaChave);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoLogicaContext extends ParserRuleContext {
		public List<TerminalNode> Var() { return getTokens(CmzmLangParser.Var); }
		public TerminalNode Var(int i) {
			return getToken(CmzmLangParser.Var, i);
		}
		public TerminalNode OpRel() { return getToken(CmzmLangParser.OpRel, 0); }
		public ExpressaoLogicaStringContext expressaoLogicaString() {
			return getRuleContext(ExpressaoLogicaStringContext.class,0);
		}
		public ExpressaoLogicaIntContext expressaoLogicaInt() {
			return getRuleContext(ExpressaoLogicaIntContext.class,0);
		}
		public ExpressaoLogicaRealContext expressaoLogicaReal() {
			return getRuleContext(ExpressaoLogicaRealContext.class,0);
		}
		public ExpressaoLogicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoLogica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterExpressaoLogica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitExpressaoLogica(this);
		}
	}

	public final ExpressaoLogicaContext expressaoLogica() throws RecognitionException {
		ExpressaoLogicaContext _localctx = new ExpressaoLogicaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressaoLogica);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				match(Var);
				setState(69);
				match(OpRel);
				setState(70);
				match(Var);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				expressaoLogicaString();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				expressaoLogicaInt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				expressaoLogicaReal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoLogicaStringContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(CmzmLangParser.Var, 0); }
		public TerminalNode OpRel() { return getToken(CmzmLangParser.OpRel, 0); }
		public List<TerminalNode> LString() { return getTokens(CmzmLangParser.LString); }
		public TerminalNode LString(int i) {
			return getToken(CmzmLangParser.LString, i);
		}
		public ExpressaoLogicaStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoLogicaString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterExpressaoLogicaString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitExpressaoLogicaString(this);
		}
	}

	public final ExpressaoLogicaStringContext expressaoLogicaString() throws RecognitionException {
		ExpressaoLogicaStringContext _localctx = new ExpressaoLogicaStringContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expressaoLogicaString);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(Var);
				setState(77);
				match(OpRel);
				setState(78);
				match(LString);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(LString);
				setState(80);
				match(OpRel);
				setState(81);
				match(Var);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				match(LString);
				setState(83);
				match(OpRel);
				setState(84);
				match(LString);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoLogicaIntContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(CmzmLangParser.Var, 0); }
		public TerminalNode OpRel() { return getToken(CmzmLangParser.OpRel, 0); }
		public List<TerminalNode> NInt() { return getTokens(CmzmLangParser.NInt); }
		public TerminalNode NInt(int i) {
			return getToken(CmzmLangParser.NInt, i);
		}
		public ExpressaoLogicaIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoLogicaInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterExpressaoLogicaInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitExpressaoLogicaInt(this);
		}
	}

	public final ExpressaoLogicaIntContext expressaoLogicaInt() throws RecognitionException {
		ExpressaoLogicaIntContext _localctx = new ExpressaoLogicaIntContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expressaoLogicaInt);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(Var);
				setState(88);
				match(OpRel);
				setState(89);
				match(NInt);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(NInt);
				setState(91);
				match(OpRel);
				setState(92);
				match(Var);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(NInt);
				setState(94);
				match(OpRel);
				setState(95);
				match(NInt);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressaoLogicaRealContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(CmzmLangParser.Var, 0); }
		public TerminalNode OpRel() { return getToken(CmzmLangParser.OpRel, 0); }
		public List<TerminalNode> NReal() { return getTokens(CmzmLangParser.NReal); }
		public TerminalNode NReal(int i) {
			return getToken(CmzmLangParser.NReal, i);
		}
		public ExpressaoLogicaRealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressaoLogicaReal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterExpressaoLogicaReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitExpressaoLogicaReal(this);
		}
	}

	public final ExpressaoLogicaRealContext expressaoLogicaReal() throws RecognitionException {
		ExpressaoLogicaRealContext _localctx = new ExpressaoLogicaRealContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expressaoLogicaReal);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(Var);
				setState(99);
				match(OpRel);
				setState(100);
				match(NReal);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(NReal);
				setState(102);
				match(OpRel);
				setState(103);
				match(Var);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(NReal);
				setState(105);
				match(OpRel);
				setState(106);
				match(NReal);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoContext extends ParserRuleContext {
		public AtribuicaoStringContext atribuicaoString() {
			return getRuleContext(AtribuicaoStringContext.class,0);
		}
		public AtribuicaoIntContext atribuicaoInt() {
			return getRuleContext(AtribuicaoIntContext.class,0);
		}
		public AtribuicaoRealContext atribuicaoReal() {
			return getRuleContext(AtribuicaoRealContext.class,0);
		}
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitAtribuicao(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atribuicao);
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				atribuicaoString();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				atribuicaoInt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				atribuicaoReal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoStringContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(CmzmLangParser.Var, 0); }
		public TerminalNode Atribuicao() { return getToken(CmzmLangParser.Atribuicao, 0); }
		public TerminalNode LString() { return getToken(CmzmLangParser.LString, 0); }
		public AtribuicaoStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicaoString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterAtribuicaoString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitAtribuicaoString(this);
		}
	}

	public final AtribuicaoStringContext atribuicaoString() throws RecognitionException {
		AtribuicaoStringContext _localctx = new AtribuicaoStringContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atribuicaoString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(Var);
			setState(115);
			match(Atribuicao);
			setState(116);
			match(LString);
			setState(117);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoIntContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(CmzmLangParser.Var, 0); }
		public TerminalNode Atribuicao() { return getToken(CmzmLangParser.Atribuicao, 0); }
		public TerminalNode NInt() { return getToken(CmzmLangParser.NInt, 0); }
		public ExpressaoAritIntContext expressaoAritInt() {
			return getRuleContext(ExpressaoAritIntContext.class,0);
		}
		public AtribuicaoIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicaoInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterAtribuicaoInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitAtribuicaoInt(this);
		}
	}

	public final AtribuicaoIntContext atribuicaoInt() throws RecognitionException {
		AtribuicaoIntContext _localctx = new AtribuicaoIntContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_atribuicaoInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(Var);
			setState(120);
			match(Atribuicao);
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(121);
				match(NInt);
				}
				break;
			case 2:
				{
				setState(122);
				expressaoAritInt(0);
				}
				break;
			}
			setState(125);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoRealContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(CmzmLangParser.Var, 0); }
		public TerminalNode Atribuicao() { return getToken(CmzmLangParser.Atribuicao, 0); }
		public TerminalNode NReal() { return getToken(CmzmLangParser.NReal, 0); }
		public ExpressaoAritRealContext expressaoAritReal() {
			return getRuleContext(ExpressaoAritRealContext.class,0);
		}
		public AtribuicaoRealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicaoReal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).enterAtribuicaoReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CmzmLangListener ) ((CmzmLangListener)listener).exitAtribuicaoReal(this);
		}
	}

	public final AtribuicaoRealContext atribuicaoReal() throws RecognitionException {
		AtribuicaoRealContext _localctx = new AtribuicaoRealContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_atribuicaoReal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(Var);
			setState(128);
			match(Atribuicao);
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(129);
				match(NReal);
				}
				break;
			case 2:
				{
				setState(130);
				expressaoAritReal(0);
				}
				break;
			}
			setState(133);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
